// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get all buckets 1`] = `
Array [
  Object {
    "created_at": "2021-02-17T04:43:32.770206+00:00",
    "id": "bucket2",
    "name": "bucket2",
    "owner": "4d56e902-f0a0-4662-8448-a4d9e643c142",
    "public": false,
    "updated_at": "2021-02-17T04:43:32.770206+00:00",
  },
  Object {
    "created_at": "2021-02-17T04:43:32.770206+00:00",
    "id": "bucket3",
    "name": "bucket3",
    "owner": "4d56e902-f0a0-4662-8448-a4d9e643c142",
    "public": false,
    "updated_at": "2021-02-17T04:43:32.770206+00:00",
  },
  Object {
    "created_at": "2021-02-25T09:23:01.58385+00:00",
    "id": "bucket4",
    "name": "bucket4",
    "owner": "317eadce-631a-4429-a0bb-f19a7a517b4a",
    "public": false,
    "updated_at": "2021-02-25T09:23:01.58385+00:00",
  },
  Object {
    "created_at": "2021-02-27T03:04:25.6386+00:00",
    "id": "bucket5",
    "name": "bucket5",
    "owner": "317eadce-631a-4429-a0bb-f19a7a517b4a",
    "public": false,
    "updated_at": "2021-02-27T03:04:25.6386+00:00",
  },
]
`;

exports[`Get bucket by id 1`] = `
Object {
  "created_at": "2021-02-17T04:43:32.770206+00:00",
  "id": "bucket2",
  "name": "bucket2",
  "owner": "4d56e902-f0a0-4662-8448-a4d9e643c142",
  "public": false,
  "updated_at": "2021-02-17T04:43:32.770206+00:00",
}
`;

exports[`Get bucket with wrong id 1`] = `
Object {
  "message": "The resource was not found",
  "status": 400,
}
`;

exports[`delete bucket 1`] = `
Object {
  "message": "Successfully deleted",
}
`;

exports[`empty bucket 1`] = `
Object {
  "message": "Successfully emptied",
}
`;

exports[`update bucket 1`] = `
Object {
  "message": "Successfully updated",
}
`;
